Retrieve/objects/Goodwill__c.object
<CustomObject>
    <fields>
        <fullName>BudgetCode__c</fullName>
        <label>Budget Code</label>
        <picklist>
            <picklistValues>
                <fullName>1CO_Coussinets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1LVE_Lève Vitres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cluthc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coyote Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Delegated 2nd Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Customer Chq - Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Customer Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Customer Invoice - Fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Customer - Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Customer - Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Dealer - Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Dealer - Legal Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD Pays Dealer - Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD STANDARD EXCHANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine flywheel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F9Q ALTERNATOR PULLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Budget Spec. Sales Dep.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K9K H.P. Fuel Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allemange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMO Cntry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAH</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpenseCode__c</fullName>
        <label>Expense Code</label>
        <picklist>
            <picklistValues>
                <fullName>Additional services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework_PGCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework_Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARANTIE ECHANGE STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer paying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Technical Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numerous Faults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offre Client Multi-pannes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts dept.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts no longer manufactured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCS : Manu. Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal Goodwill Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeated Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retaining Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Std Exchange Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfair price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VO Warranty</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organ__c</fullName>
        <label>Incident Type</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>AC COMPRESSOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTITHEFT SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMATIC GEARBOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAKE DISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAKE PADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUMPERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATALYTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLUTCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INJECTION PUMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIGHTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUAL GEARBOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROOF BARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEERING BOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEERING COLUMN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIMING BELT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TURBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDOW MECH.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENGINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEAR BOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEERING WHEEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIR CONDITIONING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT QUALITY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ResolutionCode__c</fullName>
        <label>Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attestation Constructeur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attestation de transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attestation et Francisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy back vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carnet garantie et entretien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAR RENTAL GOODWILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAR RENTAL GOODWILL (due to parts unavailability)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMERCIAL GOODWILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct to spec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Voucher Claimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Voucher Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosis Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicata de COC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Hire Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTENDED WARRANTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM Contribution Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan of Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Contract offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network paying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO GOODWILL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>MA_GOO_Commercial_RecType</fullName>
        <active>true</active>
        <description>This is for specific Morocco Country Commercial RecType</description>
        <label>MA GOO Commercial RecType</label>
    </recordTypes>
    <recordTypes>
        <fullName>UA_GOO_Commercial_RecType</fullName>
        <active>true</active>
        <description>UA Commercial Record Type</description>
        <label>UA GOO Commercial RecType</label>
    </recordTypes>
</CustomObject>